# ohtu-miniprojekti

./: .coveragerc  .gitignore  .pylintrc  Dockerfile  LICENSE.md  Procfile  README.md  docker-compose.yml  index.py  pyproject.toml  report.md  run_robot_tests.sh
.github/workflows/: main.yml  robot.yml
src/: AppLibrary.py  app.py  config.py  database.py  entity.py  index.py  routes.py
src/entities/: book.py  course.py  course_to_book.py  course_to_podcast.py  course_to_weblink.py  podcast.py  weblink.py
src/repositories/: book_repository.py  course_repository.py  podcast_repository.py  weblink_repository.py
src/services/: book_service.py  course_service.py  podcast_service.py  weblink_service.py
src/static/: script.js  style.css
src/templates/: addlink.html  base.html  books.html  courses.html  form.html  header.html  index.html  macros.html  podcasts.html  vinks.html  weblinks.html
src/tests/: acceptance.robot  end_to_end_test.py  entity_test.py  hello.robot  integrity_test.py  resource.robot  routes_test.py
ui/: main.html
