[tool.poetry]
name = "miniprojekti"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.8.12"
Flask = "^2.0.2"
Flask-SQLAlchemy = "^2.5.1"
pylint-flask = "^0.6"
python-dotenv = "^0.19.2"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
robotframework = "^4.1.2"
pylint = "^2.11.1"
robotframework-seleniumlibrary = "^5.1.3"
Flask-Testing = "^0.8.1"
coverage = "^6.1.2"
pylint-flask-sqlalchemy = "^0.2.0"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
